--- a/src/_header.scss
+++ b/src/_header.scss
@@ -4,6 +4,6 @@
 @version      0.1.0
 @license      GPL-3.0
 @preprocessor default
-@homepageURL https://foo
-@updateURL https://foo
+@homepageURL https://github.com/Alorel/dh3-restyled
+@updateURL https://github.com/Alorel/dh3-restyled/raw/master/dh3-restyled.user.css
 ==/UserStyle== */
