--- a/dh3-restyled.user.scss
+++ b/dh3-restyled.user.scss
@@ -9,6 +9,7 @@
   @import "src/notification-area";
   @import "src/table-top-main-items";
   @import "src/tooltips";
+  @import "src/farming-tab";
 }
 
 
